--- a/style.css
+++ b/style.css
@@ -15,6 +15,17 @@ html, body {
     width: 100%;
 }
 
+body::-webkit-scrollbar{
+    display: block;
+    width: 8px;
+    background-color: #8be6e2;
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color: #fff;
+    border-radius: 50px;
+}
+
 #nav{
     height: 7vw;
     width: 100%;
